<resources>
    <string name="app_name">Movie Catalogue</string>
    <string-array name="title">
        <item>A Star Is Born (2018)</item>
        <item>Aquaman (2018)</item>
        <item>Avengers:Infinity War (2018)</item>
        <item>Bird Box (2018)</item>
        <item>Bohemian Rhapsody (2018)</item>
        <item>Bumblebee (2018)</item>
        <item>Creed II (2018)</item>
        <item>Once Upon a Deadpool (2018)</item>
        <item>How to Train Your Dragon:The Hidden World (2019)</item>
        <item>Dragon Ball Super (2015)</item>
        <item>Glass (2019)</item>
        <item>Hunter Killer (2019)</item>
        <item>Mary Poppins Return (2018)</item>
        <item>Mortal Engines (2018)</item>
        <item>Preman Pensiun (2019)</item>
        <item>Robin Hood (2018)</item>
        <item>Spider-Man: Into The Spider-Verse (2018)</item>
        <item>The Girl in The Spiders Web (2018)</item>
        <item>The Mule (2018)</item>
        <item>Venom (2018)</item>
    </string-array>
    <string name="statue_film">Released</string>
    <string-array name="release_date">
        <item>October 13, 2018</item>
        <item>December 07, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>November 11, 2018</item>
        <item>January 03, 2019</item>
        <item>July 05, 2015</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>November 27, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 06, 2018</item>
        <item>October 25, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
    </string-array>
    <string name="actor">Actor/Actress</string>
    <string name="actor_name">Robert Downey Jr.</string>
    <string name="desc_poster_detail">This is a poster image of the selected item</string>
    <string name="on">on</string>
    <string name="original_language">Original Language</string>
    <string-array name="language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Indonesian</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="budget">
        <item>$36,000,000.00</item>
        <item>$160,000,000.00</item>
        <item>$300,000,000.00</item>
        <item>$19,800,000.00</item>
        <item>$52,000,000.00</item>
        <item>$135,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>-</item>
        <item>$129,000,000.00</item>
        <item>-</item>
        <item>$20,000,000.00</item>
        <item>-</item>
        <item>$130,000,000.00</item>
        <item>$100,000,000.00</item>
        <item>-</item>
        <item>$100,000,000.00</item>
        <item>$90,000,000.00</item>
        <item>$43,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>$116,000,000.00</item>
    </string-array>
    <string name="budget_value">$2,000,200.00</string>
    <string-array name="revenue">
        <item>$433,888,866.00</item>
        <item>$1,143,689,193.00</item>
        <item>$2,046,239,637.00</item>
        <item>-</item>
        <item>$835,137,710.00</item>
        <item>$465,895,025.00</item>
        <item>$137,944,327.00</item>
        <item>-</item>
        <item>$517,526,875.00</item>
        <item>-</item>
        <item>$246,941,965.00</item>
        <item>-</item>
        <item>$348,807,090.00</item>
        <item>$104,236,467.00</item>
        <item>-</item>
        <item>$73,260,114.00</item>
        <item>$375,450,417.00</item>
        <item>$17,894,345.00</item>
        <item>$171,304,407.00</item>
        <item>$855,013,954.00</item>
    </string-array>
    <string name="desc_ic_actor">This is an icon for actor items</string>
    <string-array name="genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Animation, Mystery, Action and Adventure</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Animation, Science Fiction</item>
        <item>Action, Crime, Thriller</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string name="genre_value">Action</string>
    <string-array name="overview">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Set just after the events of the Buu Saga of Dragon Ball Z, a deadly threat awakens once more. People lived in peace without knowing who the true heroes were during the devastating battle against Majin Buu. The powerful Dragon Balls have prevented any permanent damage, and our heroes also continue to live a normal life. In the far reaches of the universe, however, a powerful being awakens early from his slumber, curious about a prophecy of his defeat.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d etat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michaels three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>We do not have an overview translated in English. Help us expand our database by adding one.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson Kingpin Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string name="overview_value">This is a overview of the film</string>
    <string name="released_status">Released Status</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="movie_show">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="released_date">Released Date</string>
    <string name="detail">Detail</string>
    <string name="change_language">Change Language</string>
    <string name="detail_tv_show">Detail Tv Show</string>
</resources>