<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerItemView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_view"
    android:layout_marginBottom="@dimen/margin_view"
    android:background="@drawable/bg_cardbox_blue">

    <ImageView
        android:id="@+id/poster_home"
        android:layout_width="@dimen/width_poster_movie"
        android:layout_height="@dimen/height_poster_movie"
        android:contentDescription="@string/desc_poster_detail"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/poster_avengerinfinity" />

    <TextView
        android:id="@+id/title_film_home"
        style="@style/TitleStyle"
        android:textColor="@color/white"
        android:gravity="start"
        android:layout_marginStart="@dimen/margin_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/statue_film_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:layout_marginBottom="@dimen/textview_margin_bottom"
        android:layout_marginTop="@dimen/textview_margin_bottom"
        tools:text="@string/statue_film"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/poster_home"
        app:layout_constraintTop_toBottomOf="@id/title_film_home" />

    <TextView
        android:id="@+id/release_film_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_view"
        android:layout_marginBottom="@dimen/textview_margin_bottom"
        android:layout_marginTop="@dimen/textview_margin_bottom"
        tools:text="@string/release_date"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/poster_home"
        app:layout_constraintTop_toBottomOf="@id/statue_film_home" />

    <ImageView
        android:id="@+id/icon_actor1"
        style="@style/IconActor"
        android:contentDescription="@string/desc_ic_actor"
        app:layout_constraintStart_toEndOf="@+id/poster_home"
        app:layout_constraintTop_toBottomOf="@id/release_film_home" />

    <TextView
        android:id="@+id/actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/icon_actor3"
        app:layout_constraintStart_toEndOf="@+id/icon_actor1"
        app:layout_constraintTop_toTopOf="@+id/icon_actor1"
        tools:text="@string/actor" />

    <ImageView
        android:id="@+id/icon_actor2"
        style="@style/IconActor"
        android:contentDescription="@string/desc_ic_actor"
        app:layout_constraintStart_toEndOf="@+id/actor_1"
        app:layout_constraintTop_toBottomOf="@id/release_film_home" />

    <TextView
        android:id="@+id/actor_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:gravity="start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/icon_actor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_actor2"
        app:layout_constraintTop_toTopOf="@+id/icon_actor2"
        tools:text="@string/actor" />

    <ImageView
        android:id="@+id/icon_actor3"
        style="@style/IconActor"
        android:contentDescription="@string/desc_ic_actor"
        app:layout_constraintStart_toEndOf="@+id/poster_home"
        app:layout_constraintTop_toBottomOf="@id/icon_actor1" />

    <TextView
        android:id="@+id/actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/icon_actor3"
        app:layout_constraintStart_toEndOf="@+id/icon_actor3"
        app:layout_constraintTop_toTopOf="@+id/icon_actor3"
        tools:text="@string/actor" />
</androidx.constraintlayout.widget.ConstraintLayout>